infra/k8s/prod/cryptocurrencies-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptocurrencies-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cryptocurrencies
  template:
    metadata:
      labels:
        app: cryptocurrencies
    spec:
      containers:
        - name: cryptocurrencies
          image: us.gcr.io/supercoder-dev/cryptocurrencies
---
apiVersion: v1
kind: Service
metadata:
  name: cryptocurrencies-srv
spec:
  selector:
    app: cryptocurrencies
  ports:
    - name: cryptocurrencies
      protocol: TCP
      port: 5001
      targetPort: 5000
