infra/k8s/prod/favorites-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favorites-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favorites
  template:
    metadata:
      labels:
        app: favorites
    spec:
      containers:
        - name: favorites
          image: us.gcr.io/supercoder-dev/favorites
---
apiVersion: v1
kind: Service
metadata:
  name: favorites-srv
spec:
  selector:
    app: favorites
  ports:
    - name: favorites
      protocol: TCP
      port: 5001
      targetPort: 5000
