infra/k8s/prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: crypto.supercoder.dev
      http:
        paths:
          - path: /api/favorites/?(.*)
            backend:
              serviceName: favorites-srv
              servicePort: 5000
